tests/machine/x/fs/cast_struct.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/cast_struct.fs(6,70): error FS1129: The type 'Collections.Generic.IDictionary<string,string>' does not contain a field 'title'

/workspace/mochi/tests/machine/x/fs/cast_struct.fs(7,15): error FS0193: Type constraint mismatch. The type 
    Collections.Generic.IDictionary<string,string>    
is not compatible with type
    Todo    
The type 'Collections.Generic.IDictionary<string,string>' is not compatible with the type 'Todo'
