tests/machine/x/fs/cast_struct.fs
open System

type Todo = {
    mutable title: string
}
let todo: System.Collections.Generic.IDictionary<string, string> = { title = "hi" }
printfn "%A" (todo.title)
